# cxxStrPar

./: CMakeLists.txt  README.md  examples.cpp  input.txt  input2.txt  input3.txt  parsingLibrary.cpp  parsingLibrary.h  test.cpp
